--- a/styleran.css
+++ b/styleran.css
@@ -190,12 +190,13 @@ button:focus {
 
   .m {
      width: 100%;
-     height: 300px;
+     height: 400px;
      font-size: 50px;
      display: flex;
      justify-content: space-evenly;
      margin-top: 0px;
      background-color: rgb(233, 232, 231);
+     padding: 20px;
   }
 
   .ms {
@@ -203,6 +204,8 @@ button:focus {
     overflow: hidden;
     text-align: center;
     background-color: rgb(233, 232, 231);
+    box-shadow: 5px 10px 8px #888888;
+   
     
   }
 
