--- a/styleran.css
+++ b/styleran.css
@@ -1,193 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
 
-body {
-  font-family: 'Open Sans', sans-serif;
-  height: 100vh;
-}
-
-.slider-container {
-  position: relative;
-  overflow: hidden;
-  width: 100%;
-  height: 100vh;
-
-}
-
-.left-slide {
-  height: 100%;
-  width: 35%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  transition: transform 0.5s ease-in-out;
-}
-
-.left-slide > div {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  color: #fff;
-}
-
-.left-slide h1 {
-  font-size: 40px;
-  margin-bottom: 10px;
-  margin-top: -30px;
-}
-
-.right-slide {
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 35%;
-  width: 65%;
-  transition: transform 0.5s ease-in-out;
-}
-
-.right-slide > div {
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  height: 100%;
-  width: 100%;
-}
-
-button {
-  background-color: transparent;
-  border: none;
-  color: black;
-  cursor: pointer;
-  font-size: 16px;
-  padding: 15px;
-  border: none;
   
-}
-
-button:hover {
-  color: #222;
-}
-
-button:focus {
-  outline: none;
-}
-
-.slider-container .action-buttons button {
-  position: absolute;
-  left: 35%;
-  top: 50%;
-  z-index: 100;
-}
-
-.slider-container .action-buttons .down-button {
-  transform: translateX(-100%);
-  border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
-}
-
-.slider-container .action-buttons .up-button {
-  transform: translateY(-100%);
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
-}
-
-.slider-container .buttons button {
-    position: relative;
-   
-    top: 55%;
-    z-index: 100;
-    border-radius: 5px;
-  }
-
-
-  .nav {
-    position: sticky;
-    z-index: 110;
-    top: 0;
-    height: 70px;
-    left: 0;
-    width: 100%;
-    padding: 15px 200px;
-    background: rgb(54, 53, 53);
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-  }
-  .nav,
-  .nav .nav-links {
-    display: flex;
-    align-items: center;
-  }
-  .nav {
-    justify-content: space-between;
-  }
-  a {
-    color: #fff;
-    text-decoration: none;
-  }
-  .nav .logo {
-    font-size: 22px;
-    font-weight: 500;
-  }
-  .nav .nav-links {
-    column-gap: 20px;
-    list-style: none;
-  }
-  .nav .nav-links a {
-    transition: all 0.2s linear;
-  }
-  .nav.openSearch .nav-links a {
-    opacity: 0;
-    pointer-events: none;
-  }
-  .nav .search-icon {
-    color: #fff;
-    font-size: 20px;
-    cursor: pointer;
-  }
-  .nav .search-box {
-    position: absolute;
-    right: 250px;
-    height: 45px;
-    max-width: 555px;
-    width: 100%;
-    opacity: 0;
-    pointer-events: none;
-    transition: all 0.2s linear;
-  }
-  .nav.openSearch .search-box {
-    opacity: 1;
-    pointer-events: auto;
-  }
-  .search-box .search-icon {
-    position: absolute;
-    left: 15px;
-    top: 50%;
-    left: 15px;
-    color: #4a98f7;
-    transform: translateY(-50%);
-  }
-  .search-box input {
-    height: 100%;
-    width: 100%;
-    border: none;
-    outline: none;
-    border-radius: 6px;
-    background-color: #fff;
-    padding: 0 15px 0 45px;
-  }
-  
-  .nav .navOpenBtn,
-  .nav .navCloseBtn {
-    display: none;
-  }
-
   .m {
      width: 100%;
      height: 400px;
@@ -229,10 +42,26 @@ button:focus {
     background-image: url(https://images.pexels.com/photos/271624/pexels-photo-271624.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
     background-size: cover;
   }
+
+  .mk1 {
+    background-image: url(https://images.pexels.com/photos/189296/pexels-photo-189296.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+    background-size: cover;
+  }
+
+  .mk2 {
+    background-image: url(https://images.pexels.com/photos/1954524/pexels-photo-1954524.jpeg);
+    background-size: cover;
+  }
+
+  .mk3 {
+    background-image: url(https://images.pexels.com/photos/831475/pexels-photo-831475.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+    background-size: cover;
+  }
   
   .rooms {
     text-align: center;
-    margin-top: 30px;
+    margin-top: 15vh;
+    margin-bottom: 5vh;
     font-family: "Baskervville", serif;
   font-optical-sizing: auto;
   font-size: 20px;
@@ -249,7 +78,7 @@ button:focus {
     color: #2f2f2f;
     background-color: #f3ebeb;
     border-top: 1px solid #e5e5e5;
-    margin-top: 50px;
+    margin-top: 15vh;
   }
   
   .footer > * {
@@ -367,4 +196,28 @@ button:focus {
     .footer__nav {
       flex: 2 0px;
     }
+  }
+
+  .nav-link {
+    color: #000;
+  }
+
+  .carousel-item {
+    width: 100vw;
+    height: 100vh;
+  }
+
+  .carousel {
+    height: 100vh;
+  }
+
+  .carousel-item img {
+    object-fit: cover;
+  /* or
+    object-fit: cover; */
+  } 
+  
+  .mask-custom {
+    backdrop-filter: blur(5px);
+    background-color: rgba(255, 255, 255, .15);
   }
