--- a/styleran.css
+++ b/styleran.css
@@ -10,6 +10,7 @@
      margin-top: 0px;
      background-color: white;
      padding: 20px;
+     margin-bottom: 15vh;
   }
 
   .ms {
@@ -220,4 +221,9 @@
   .mask-custom {
     backdrop-filter: blur(5px);
     background-color: rgba(255, 255, 255, .15);
+  }
+
+  .card {
+    width: 80vw;
+    left: 10vw;
   }
