--- a/owl-carousal.css
+++ b/owl-carousal.css
@@ -13,7 +13,7 @@
     
   }
   .card{
-    border-radius: 25px;
+   
     background-color: #FFF;
     
     
@@ -40,56 +40,44 @@
     top: 0;
     height: 100%;
     width: 100%;
-    background-color: #4070F4;
-    border-radius: 25px 25px 25px 25px;
+   
+   
   }
-  .overlay::before,
-  .overlay::after{
-    content: '';
-    position: absolute;
-    right: 0;
-    bottom: -40px;
-    height: 40px;
-    width: 40px;
-    background-color: #4070F4;
-  }
-  .overlay::after{
-    border-radius: 0 px 0 0;
-    background-color: #FFF;
-  }
+ 
  
   
   .name{
     font-size: 18px;
     font-weight: 500;
-    color: #333;
+   color: black;
   }
   .description{
     font-size: 14px;
-    color: #707070;
+   color: black;
     text-align: center;
   }
   .button{
+    background-color: #04AA6D;
+    color: #ffffff;
     border: none;
-    font-size: 16px;
-    color: #FFF;
-    padding: 8px 16px;
-    background-color: #4070F4;
-    border-radius: 6px;
-    margin: 14px;
+    padding: 10px 20px;
+    font-size: 17px;
+    font-family: Raleway;
     cursor: pointer;
+    
     transition: all 0.3s ease;
   }
   .button:hover{
-    background: #265DF2;
+    opacity: 0.8;
   }
   
   .swiper-navBtn{
-    color: #6E93f7;
+    color: #108b5e  !important;
     transition: color 0.3s ease;
+   
   }
   .swiper-navBtn:hover{
-    color: #4070F4;
+    opacity: 0.8;
   }
   .swiper-navBtn::before,
   .swiper-navBtn::after{
@@ -102,12 +90,12 @@
     left: 0;
   }
   .swiper-pagination-bullet{
-    background-color: #6E93f7;
+    background-color: #04AA6D;
     opacity: 1;
-    margin: 20px;
+    margin: 10px;
   }
   .swiper-pagination-bullet-active{
-    background-color: #4070F4;
+    background-color: #04AA6D;
   }
   
   @media screen and (max-width: 768px) {
