--- a/styleran.css
+++ b/styleran.css
@@ -1,249 +1,397 @@
 
+body {
+  background-color: #f1f1f1;
+}
 
-  
-  .m {
-     width: 100%;
-     height: 400px;
-     font-size: 50px;
-     display: flex;
-     justify-content: space-evenly;
-     margin-top: 0px;
-     background-color: white;
-     padding: 20px;
-     margin-bottom: 15vh;
-  }
 
-  .ms {
-    width: 20%;
-    overflow: hidden;
-    text-align: center;
-    background-color: rgb(233, 232, 231);
-    box-shadow: 5px 10px 8px #888888;
-   
-    
-  }
+.m {
+  width: 100%;
+  height: 400px;
+  font-size: 50px;
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 0px;
+  background-color: white;
+  padding: 20px;
+  margin-bottom: 15vh;
+}
 
-  .ms > p {
- margin-top: 220px;
- font-family: "Cinzel", serif;
+.ms {
+  width: 20%;
+  overflow: hidden;
+  text-align: center;
+  background-color: rgb(233, 232, 231);
+  box-shadow: 5px 10px 8px #888888;
 
-  }
 
-  .ms1 {
-    background-image: url(https://images.pexels.com/photos/164595/pexels-photo-164595.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
-    background-size: cover;
-  }
+}
 
-  .ms2 {
-    background-image: url(https://images.pexels.com/photos/262048/pexels-photo-262048.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
-    background-size: cover;
-  }
+.ms>p {
+  margin-top: 220px;
+  font-family: "Cinzel", serif;
 
-  .ms3 {
-    background-image: url(https://images.pexels.com/photos/271624/pexels-photo-271624.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
-    background-size: cover;
-  }
+}
 
-  .mk1 {
-    background-image: url(https://images.pexels.com/photos/189296/pexels-photo-189296.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
-    background-size: cover;
-  }
+.ms1 {
+  background-image: url(https://images.pexels.com/photos/164595/pexels-photo-164595.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+  background-size: cover;
+}
 
-  .mk2 {
-    background-image: url(https://images.pexels.com/photos/1954524/pexels-photo-1954524.jpeg);
-    background-size: cover;
-  }
+.ms2 {
+  background-image: url(https://images.pexels.com/photos/262048/pexels-photo-262048.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+  background-size: cover;
+}
 
-  .mk3 {
-    background-image: url(https://images.pexels.com/photos/831475/pexels-photo-831475.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
-    background-size: cover;
-  }
-  
-  .our-rooms {
-    text-align: center;
-    margin-top: 15vh;
-    margin-bottom: 5vh;
-    font-family: "Baskervville", serif;
+.ms3 {
+  background-image: url(https://images.pexels.com/photos/271624/pexels-photo-271624.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+  background-size: cover;
+}
+
+.mk1 {
+  background-image: url(https://images.pexels.com/photos/189296/pexels-photo-189296.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+  background-size: cover;
+}
+
+.mk2 {
+  background-image: url(https://images.pexels.com/photos/1954524/pexels-photo-1954524.jpeg);
+  background-size: cover;
+}
+
+.mk3 {
+  background-image: url(https://images.pexels.com/photos/831475/pexels-photo-831475.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+  background-size: cover;
+}
+
+.our-rooms {
+  text-align: center;
+  margin-top: 15vh;
+  margin-bottom: 5vh;
+  font-family: "Baskervville", serif;
   font-optical-sizing: auto;
   font-size: 20px;
   line-height: 3.9;
   font-style: normal;
   background-color: white;
-  }
+}
 
 
-  .footer {
-    display: flex;
-    flex-flow: row wrap;
-    padding: 70px 30px 40px 30px;
-    color: #2f2f2f;
-    background-color: #f3ebeb;
-    border-top: 1px solid #e5e5e5;
-    margin-top: 15vh;
+.footer {
+  display: flex;
+  flex-flow: row wrap;
+  padding: 70px 30px 40px 30px;
+  color: #2f2f2f;
+  background-color: #f3ebeb;
+  border-top: 1px solid #e5e5e5;
+  margin-top: 15vh;
+}
+
+.footer>* {
+  flex: 1 100%;
+}
+
+.footer__addr {
+  margin-right: 1.25em;
+  margin-bottom: 2em;
+}
+
+.footer__logo {
+  font-family: 'Pacifico', cursive;
+  font-weight: 400;
+  text-transform: lowercase;
+  font-size: 1.5rem;
+}
+
+.footer__addr h2 {
+  margin-top: 1.3em;
+  font-size: 15px;
+  font-weight: 400;
+}
+
+.nav__title {
+  font-weight: 400;
+  font-size: 15px;
+}
+
+.footer address {
+  font-style: normal;
+  color: #999;
+}
+
+.footer__btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 36px;
+  max-width: max-content;
+  background-color: rgb(33, 33, 33, 0.07);
+  border-radius: 100px;
+  color: #2f2f2f;
+  line-height: 0;
+  margin: 0.6em 0;
+  font-size: 1rem;
+  padding: 0 1.3em;
+}
+
+.footer ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+.footer li {
+  line-height: 2em;
+}
+
+.footer a {
+  text-decoration: none;
+}
+
+.footer__nav {
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.footer__nav>* {
+  flex: 1 50%;
+  margin-right: 1.25em;
+  margin-left: 1.25em;
+}
+
+.nav__ul a {
+  color: #999;
+}
+
+
+
+.legal {
+  display: flex;
+  flex-wrap: wrap;
+  color: #999;
+
+}
+
+.legal__links {
+  display: flex;
+  align-items: center;
+}
+
+.heart {
+  color: #2f2f2f;
+}
+
+@media screen and (min-width: 24.375em) {
+  .legal .legal__links {
+    margin-left: auto;
   }
-  
-  .footer > * {
-    flex:  1 100%;
+}
+
+@media screen and (min-width: 40.375em) {
+  .footer__nav>* {
+    flex: 1;
   }
-  
+
+  .nav__item--extra {
+    flex-grow: 1;
+  }
+
   .footer__addr {
-    margin-right: 1.25em;
-    margin-bottom: 2em;
+    flex: 1 0px;
   }
-  
-  .footer__logo {
-    font-family: 'Pacifico', cursive;
-    font-weight: 400;
-    text-transform: lowercase;
-    font-size: 1.5rem;
-  }
-  
-  .footer__addr h2 {
-    margin-top: 1.3em;
-    font-size: 15px;
-    font-weight: 400;
-  }
-  
-  .nav__title {
-    font-weight: 400;
-    font-size: 15px;
-  }
-  
-  .footer address {
-    font-style: normal;
-    color: #999;
-  }
-  
-  .footer__btn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 36px;
-    max-width: max-content;
-    background-color: rgb(33, 33, 33, 0.07);
-    border-radius: 100px;
-    color: #2f2f2f;
-    line-height: 0;
-    margin: 0.6em 0;
-    font-size: 1rem;
-    padding: 0 1.3em;
-  }
-  
-  .footer ul {
-    list-style: none;
-    padding-left: 0;
-  }
-  
-  .footer li {
-    line-height: 2em;
-  }
-  
-  .footer a {
-    text-decoration: none;
-  }
-  
+
   .footer__nav {
-    display: flex;
-      flex-flow: row wrap;
+    flex: 2 0px;
   }
-  
-  .footer__nav > * {
-    flex: 1 50%;
-    margin-right: 1.25em;
-    margin-left: 1.25em;
-  }
-  
-  .nav__ul a {
-    color: #999;
-  }
-  
-  
-  
-  .legal {
-    display: flex;
-    flex-wrap: wrap;
-    color: #999;
-   
-  }
-    
-  .legal__links {
-    display: flex;
-    align-items: center;
-  }
-  
-  .heart {
-    color: #2f2f2f;
-  }
-  
-  @media screen and (min-width: 24.375em) {
-    .legal .legal__links {
-      margin-left: auto;
-    }
-  }
-  
-  @media screen and (min-width: 40.375em) {
-    .footer__nav > * {
-      flex: 1;
-    }
-    
-    .nav__item--extra {
-      flex-grow: 1;
-    }
-    
-    .footer__addr {
-      flex: 1 0px;
-    }
-    
-    .footer__nav {
-      flex: 2 0px;
-    }
-  }
+}
 
-  .nav-link {
-    color: #000;
-  }
+.nav-link {
+  color: #000;
+}
 
-  .carousel-item {
-    width: 100vw;
-    height: 100vh;
-  }
+.carousel-item {
+  width: 100vw;
+  height: 100vh;
+}
 
-  .carousel {
-    height: 100vh;
-  }
+.carousel {
+  height: 100vh;
+}
 
-  .carousel-item img {
-    object-fit: cover;
+.carousel-item img {
+  object-fit: cover;
   /* or
     object-fit: cover; */
-  } 
-  
-  .mask-custom {
-    backdrop-filter: blur(5px);
-    background-color: rgba(255, 255, 255, .15);
-  }
+}
 
-  .card {
-    width: 80vw;
-    left: 10vw;
-  }
+.mask-custom {
+  backdrop-filter: blur(5px);
+  background-color: rgba(255, 255, 255, .15);
+}
 
-  room-pic{
-    overflow: hidden;
-    margin-left: 10vw;
-    margin-right: 10vw;
-  }
+.card {
+  width: 80vw;
+  left: 10vw;
+}
 
-  .room{
+.room-pic {
+  overflow: hidden;
+  margin-left: 10vw;
+  margin-right: 10vw;
+}
 
-    height: 50vh;
-    width: 100%;
-  }
+.room {
 
-  .card{
-    margin-top: 15vh;
-  }
+  height: 50vh;
+  width: 100%;
+}
 
- 
+.card {
+  margin-top: 15vh;
+}
 
-  
+
+
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Baskervville", serif;
+  color: #000;
+  margin-top: 0px;
+  font-style: normal;
+  font-weight: 500;
+  text-transform: normal
+}
+
+p {
+  font-family: "Jost", sans-serif;
+  color: black;
+  font-size: 16px;
+  line-height: 30px;
+  margin-bottom: 15px;
+  margin-top: 150px;
+  font-weight: normal;
+  line-height: 1.4
+}
+
+
+.c1 {
+
+
+  background-image: url(https://images.pexels.com/photos/11521776/pexels-photo-11521776.jpeg?auto=compress&cs=tinysrgb&w=600);
+  background-size: cover;
+  height: 50vh;
+  border: 1px solid black;
+}
+
+.c2 > h2 {
+  text-align: center;
+}
+.c2{
+  border: 1px solid black;
+}
+
+.services {
+  margin-bottom: 15vh;
+}
+
+.s1 {
+  border-radius: 50% 50% 50% 0;
+  border: 1px solid black;
+  height: 20vh;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 15vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
+.icon {
+  width: 50%;
+  text-align: center;
+  padding: 2px;
+  font-size: x-large;
+}
+
+.icon-text {
+  font-size: large;
+  margin-top: 20px;
+}
+
+.our-services {
+  text-align: center;
+  margin-top: 15vh;
+  margin-bottom: 5vh;
+  font-family: "Baskervville", serif;
+  font-optical-sizing: auto;
+  font-size: 20px;
+  line-height: 3.9;
+  font-style: normal;
+  background-color: white;
+}
+
+.aboutus {
+  height: 50vh;
+  margin-top: 15vh;
+  margin-bottom: 10vh;
+}
+
+
+.bubble blockquote {
+	margin: 10px 10px 0;
+	background: #fff;
+	padding: 60px;
+	position: relative;
+	border: none;
+	border-radius: 8px;
+	font-size: 1.em;
+	color: black;
+}
+.bubble blockquote:before, .bubble blockquote:after {
+	content: "\201C";
+	position: absolute;
+	font-size: 80px;
+	padding: 10px;
+	line-height: 1;
+	color: #04AA6D;
+}
+.bubble blockquote:before {
+	top: 0;
+	left: 10px;
+}
+.bubble blockquote:after {
+	content: "\201D";
+	right: 10px;
+	bottom: -.5em;
+}
+.bubble div {
+	width: 0;
+	height: 0;
+	border-left: 0 solid transparent;
+	border-right: 20px solid transparent;
+	border-top: 20px solid #fff;
+	margin: 0 0 0 60px;
+	margin-bottom: 10px;
+}
+.bubble cite {
+	padding-left: 20px;
+	font-size: 1.25em;
+  color:#161515;
+}
+
+
+.guest{
+  color: white !important;
+}
+
+.col {
+  margin-top: 10% !important;
+}
+
+.special{
+ margin-left: 20vw !important;
+ width: 60vw !important;
+}
