--- a/styleran.css
+++ b/styleran.css
@@ -1,6 +1,5 @@
-
 body {
-  background-color: #f1f1f1;
+  background-color: #f1f1f1 !important;
 }
 
 
@@ -65,7 +64,7 @@ body {
 .our-rooms {
   text-align: center;
   margin-top: 15vh;
-  margin-bottom: 5vh;
+  margin-bottom: -10vh !important;
   font-family: "Baskervville", serif;
   font-optical-sizing: auto;
   font-size: 20px;
@@ -79,10 +78,10 @@ body {
   display: flex;
   flex-flow: row wrap;
   padding: 70px 30px 40px 30px;
-  color: #2f2f2f;
-  background-color: #f3ebeb;
+  color: white;
+  background-color: black;
   border-top: 1px solid #e5e5e5;
-  margin-top: 15vh;
+  margin-top: -30vh;
 }
 
 .footer>* {
@@ -95,10 +94,10 @@ body {
 }
 
 .footer__logo {
-  font-family: 'Pacifico', cursive;
-  font-weight: 400;
-  text-transform: lowercase;
-  font-size: 1.5rem;
+ 
+  font-weight: 600;
+ 
+  font-size: 2.5rem;
 }
 
 .footer__addr h2 {
@@ -114,7 +113,7 @@ body {
 
 .footer address {
   font-style: normal;
-  color: #999;
+  color: white;
 }
 
 .footer__btn {
@@ -125,7 +124,8 @@ body {
   max-width: max-content;
   background-color: rgb(33, 33, 33, 0.07);
   border-radius: 100px;
-  color: #2f2f2f;
+  color: white;
+  border: 1px white solid;
   line-height: 0;
   margin: 0.6em 0;
   font-size: 1rem;
@@ -157,7 +157,7 @@ body {
 }
 
 .nav__ul a {
-  color: #999;
+  color: white;
 }
 
 
@@ -165,8 +165,12 @@ body {
 .legal {
   display: flex;
   flex-wrap: wrap;
-  color: #999;
+  color: white;
 
+}
+
+.legal>p {
+  color: white;
 }
 
 .legal__links {
@@ -175,7 +179,7 @@ body {
 }
 
 .heart {
-  color: #2f2f2f;
+  color: white;
 }
 
 @media screen and (min-width: 24.375em) {
@@ -229,6 +233,7 @@ body {
 .card {
   width: 80vw;
   left: 10vw;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
 .room-pic {
@@ -282,23 +287,33 @@ p {
   background-image: url(https://images.pexels.com/photos/11521776/pexels-photo-11521776.jpeg?auto=compress&cs=tinysrgb&w=600);
   background-size: cover;
   height: 50vh;
-  border: 1px solid black;
+  border: none;
+
 }
 
-.c2 > h2 {
+
+.c2>h2 {
   text-align: center;
 }
-.c2{
-  border: 1px solid black;
+
+.c2 {
+  border: none;
+  height: 50vh;
+  overflow: scroll;
+  background-color: white;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
+.aboutus-content {}
+
 .services {
-  margin-bottom: 15vh;
+  margin-bottom: 25vh;
+  margin-top: 10vh;
 }
 
 .s1 {
   border-radius: 50% 50% 50% 0;
-  border: 1px solid black;
+
   height: 20vh;
   margin-left: 10px;
   margin-right: 10px;
@@ -307,6 +322,12 @@ p {
   justify-content: center;
   align-items: center;
   overflow: hidden;
+  background-color: white;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+
+.s1:hover{
+  box-shadow: rgba(4, 170, 109,0.65) 0px 5px 35px;
 }
 
 .icon {
@@ -314,11 +335,16 @@ p {
   text-align: center;
   padding: 2px;
   font-size: x-large;
+
 }
 
 .icon-text {
   font-size: large;
   margin-top: 20px;
+}
+
+.fa-solid {
+  color: rgb(4, 170, 109);
 }
 
 .our-services {
@@ -341,57 +367,105 @@ p {
 
 
 .bubble blockquote {
-	margin: 10px 10px 0;
-	background: #fff;
-	padding: 60px;
-	position: relative;
-	border: none;
-	border-radius: 8px;
-	font-size: 1.em;
-	color: black;
+  margin: 10px 10px 0;
+  background: #fff;
+  padding: 60px;
+  position: relative;
+  border: none;
+  border-radius: 8px;
+  font-size: 1.em;
+  color: black;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
-.bubble blockquote:before, .bubble blockquote:after {
-	content: "\201C";
-	position: absolute;
-	font-size: 80px;
-	padding: 10px;
-	line-height: 1;
-	color: #04AA6D;
-}
-.bubble blockquote:before {
-	top: 0;
-	left: 10px;
-}
+
+.bubble blockquote:before,
 .bubble blockquote:after {
-	content: "\201D";
-	right: 10px;
-	bottom: -.5em;
+  content: "\201C";
+  position: absolute;
+  font-size: 80px;
+  padding: 10px;
+  line-height: 1;
+  color: #04AA6D;
 }
+
+.bubble blockquote:before {
+  top: 0;
+  left: 10px;
+}
+
+.bubble blockquote:after {
+  content: "\201D";
+  right: 10px;
+  bottom: -.5em;
+}
+
 .bubble div {
-	width: 0;
-	height: 0;
-	border-left: 0 solid transparent;
-	border-right: 20px solid transparent;
-	border-top: 20px solid #fff;
-	margin: 0 0 0 60px;
-	margin-bottom: 10px;
+  width: 0;
+  height: 0;
+  border-left: 0 solid transparent;
+  border-right: 20px solid transparent;
+  border-top: 20px solid #fff;
+  margin: 0 0 0 60px;
+  margin-bottom: 10px;
 }
+
 .bubble cite {
-	padding-left: 20px;
-	font-size: 1.25em;
-  color:#161515;
+  padding-left: 20px;
+  font-size: 1.25em;
+  color: #161515;
 }
 
 
-.guest{
-  color: white !important;
+.guest {
+  top: 15% !important;
+
 }
 
 .col {
   margin-top: 10% !important;
 }
 
-.special{
- margin-left: 20vw !important;
- width: 60vw !important;
+
+
+.a1 {
+  width: 100%;
+  height: 15vh;
+  background-color: #04AA6D;
+  color: white;
+  text-align: center;
+  margin-top: 20vh;
+  margin-bottom: 5vh;
+  padding-top: 5vh;
+}
+
+.w-100 {
+  filter: brightness(80%);
+}
+
+
+.collapse {
+  margin-left: 50%;
+}
+
+.navbar {
+  font-size: x-large;
+  position: absolute !important;
+  border-bottom: 1px solid white;
+  height: 7vh;
+  color: white;
+}
+
+.nav-link {
+  margin-left: 2%;
+}
+
+.carousel-caption {
+ 
+margin-bottom: 15%;
+}
+
+.carousel-caption > p {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 15vh;
+  color: white;
 }
